--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "jest": "^27.2.0"
+    "jest": "^27.5.1"
   },
   "author": "Henry",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "axios": "^0.21.4",
     "git-remote-origin-url": "^3.1.0",
     "git-url-parse": "^11.6.0",
-    "simple-git": "^2.45.1"
+    "simple-git": "^2.45.1",
+    "test": "^0.6.0"
   }
 }
